hphp/hack/test/typecheck/reactive/rx_if_implements5.php
<?hh // strict

interface Rx1 {}

abstract class A {
  // ERROR: cannot combine uncondition and conditional rx attributes
  <<__Rx, __RxIfImplements(Rx1::class)>>
  public function mayberx1(): void {
    $this->mayberx2();
  }
}
